feat: Implement core AI HR chatbot agent with query routing and detailed payroll logic, add employee service and registration form, and remove old test scripts.